[package]
name = "racom_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.3.21", features = ["derive"] }
serde = "1"
serde_derive = "1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
chrono = "0.4.26"
